tests/snapshots/cli_storage_zone__storage_zone_get_json.snap
---
source: tests/cli_storage_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "Id": 9001,
  "UserId": "00000000-0000-0000-0000-000000000001",
  "Name": "test-storage-zone-1",
  "Password": "<set, length=25>",
  "DateModified": "2026-03-14T11:15:44",
  "Deleted": false,
  "StorageUsed": 5635181,
  "FilesStored": 46,
  "Region": "DE",
  "ReplicationRegions": [],
  "PullZones": [],
  "ReadOnlyPassword": "<set, length=26>",
  "Rewrite404To200": false,
  "Custom404FilePath": null,
  "StorageHostname": "storage.bunnycdn.com",
  "ZoneTier": 0,
  "ReplicationChangeInProgress": false,
  "PriceOverride": 0.0,
  "Discount": 0,
  "StorageZoneType": 0
}
