tests/snapshots/cli_storage_zone__storage_zone_get_table.snap
---
source: tests/cli_storage_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+---------------------+--------+----------------------+--------------+--------------+-----------+---------------------+-----------------+-----------------+---------------------+---------+
| ID   | Name                | Region | Hostname             | Storage Used | Files Stored | Zone Tier | Replication Regions | Rewrite 404→200 | Custom 404 Path | Date Modified       | Deleted |
+------+---------------------+--------+----------------------+--------------+--------------+-----------+---------------------+-----------------+-----------------+---------------------+---------+
| 9001 | test-storage-zone-1 | DE     | storage.bunnycdn.com | 5635181      | 46           | 0         | -                   | false           | -               | 2026-03-14T11:15:44 | false   |
+------+---------------------+--------+----------------------+--------------+--------------+-----------+---------------------+-----------------+-----------------+---------------------+---------+
