tests/snapshots/cli_storage_zone__storage_zone_list_table.snap
---
source: tests/cli_storage_zone.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+------+---------------------+--------+--------------+--------------+-----------+
| ID   | Name                | Region | Storage Used | Files Stored | Zone Tier |
+------+---------------------+--------+--------------+--------------+-----------+
| 9001 | test-storage-zone-1 | DE     | 5635181      | 46           | 0         |
+------+---------------------+--------+--------------+--------------+-----------+
| 9002 | test-storage-zone-2 | DE     | 23081196     | 123          | 0         |
+------+---------------------+--------+--------------+--------------+-----------+
| 9003 | test-storage-zone-3 | DE     | 10329763     | 72           | 0         |
+------+---------------------+--------+--------------+--------------+-----------+
| 9004 | test-storage-zone-4 | DE     | 28739        | 2            | 0         |
+------+---------------------+--------+--------------+--------------+-----------+
